# emacs-zmq

./: .gitignore  .travis.yml  Makefile  README.org  appveyor.yml  gen-constants.awk  zmq-constants.el  zmq-draft.el  zmq-ffi.el  zmq-subprocess.el  zmq-tests.el  zmq.c  zmq.el
.github/workflows/: release.yml  test.yml
src/: Makefile  Makefile.am  configure.ac  constants.c  context.c  context.h  core.c  core.h  emacs-module.h  emacs-zmq.c  emacs-zmq.h  ezmq.c  ezmq.h  macros.h  msg.c  msg.h  poll.c  poll.h  socket.c  socket.h  util.c  util.h
